# nonebot-plugin-alchelper

./: .gitignore  README.md  pyproject.toml  test.py
example/: .env.prod  pyproject.toml  record.db
example/plugins/: demo.py
src/nonebot_plugin_alchelper/: __init__.py  config.py  model.py
src/nonebot_plugin_alchelper/migrations/: 7420f69398ee_0_6_0.py  a9a3810efa4a_0_5_0.py
